--- a/index.html
+++ b/index.html
@@ -23,16 +23,22 @@
       <div class="container">
         <div class="slider">
           <div class="arrow left">
-            <i class="fas fa-chevron-left"></i>
+            <i class="fas fa-chevron-circle-left"></i>
           </div>
           <div class="slider-images">
-            <img class="active first" src="img/campagna.jpg" alt="Campagna" />
-            <img src="img/cascate.webp" alt="Cascate" />
-            <img src="img/fiori.jpeg" alt="Fiori" />
-            <img class="last" src="img/montagne.webp" alt="Montagne" />
+            <div class="image">
+              <img class="active first" src="img/campagna.jpg" alt="Campagna" />
+              <img class="right-side" src="img/cascate.webp" alt="Cascate" />
+              <img src="img/fiori.jpeg" alt="Fiori" />
+              <img
+                class="last left-side"
+                src="img/montagne.webp"
+                alt="Montagne"
+              />
+            </div>
           </div>
           <div class="arrow right">
-            <i class="fas fa-chevron-right"></i>
+            <i class="fas fa-chevron-circle-right"></i>
           </div>
         </div>
       </div>
