--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             <i class="fas fa-chevron-circle-left"></i>
           </div>
           <div class="slider-images">
+            <ul class="slider-pointer">
+              <li class="active-pointer first"></li>
+              <li></li>
+              <li></li>
+              <li class="last"></li>
+            </ul>
             <div class="image">
               <img class="active first" src="img/campagna.jpg" alt="Campagna" />
               <img class="right-side" src="img/cascate.webp" alt="Cascate" />
